# OpenGL_template

./: CMakeLists.txt
Effects/Display/: Display.h
Include/: Application.h  Camera.h  EffectGL.h  EngineGL.h  Frame.h  FrameBufferObject.h  GLProgram.h  GLProgramPipeline.h  GeometricModel.h  MaterialGL.h  Node.h  Scene.h
Include/GeometricModelLoader/: AssimpLoader.h  GeometricModelLoader.h  OBJLoader.h
Libraries/: Resource_mgr.hpp
Materials/BaseMaterial/: BaseMaterial.cpp  BaseMaterial.h  Main-FS.glsl  Main-VS.glsl
Materials/PhongMaterial/: Phong-FS.glsl  Phong-VS.glsl  PhongMaterial.cpp  PhongMaterial.h
Materials/RotationMaterial/: Main-VS.glsl  RotationMaterial.cpp  RotationMaterial.h
Source/: Application.cpp  Camera.cpp  EngineGL.cpp  Frame.cpp  FrameBufferObject.cpp  GLProgramPipeline.cpp  Main.cpp  ModelGL.cpp  Node.cpp  Scene.cpp
Source/GeometricModelLoader/: AssimpLoader.cpp  OBJLoader.cpp
