cmake_minimum_required(VERSION 3.27)
project(OpenGLTemplate)

set(CMAKE_CXX_STANDARD 14)

include_directories(Effects/Display)
include_directories(Include)
include_directories(Include/GeometricModelLoader)
include_directories(Libraries)
include_directories(Libraries/Assimp)
include_directories(Libraries/Assimp/Compiler)
include_directories(Libraries/glad/include)
include_directories(Libraries/glad/include/glad)
include_directories(Libraries/glad/include/KHR)
include_directories(Libraries/GLFW)
include_directories(Libraries/GLFW/include)
include_directories(Libraries/glm)
include_directories(Libraries/glm/detail)
include_directories(Libraries/glm/ext)
include_directories(Libraries/glm/gtc)
include_directories(Libraries/glm/gtx)
include_directories(Libraries/glm/simd)
include_directories(Libraries/imgui)
include_directories(Libraries/Logger)
include_directories(Libraries/stb)
include_directories(Materials/BaseMaterial)
include_directories(Materials/PhongMaterial)
include_directories(Materials/RotationMaterial)

include_directories(Libraries/GLFW/include)

add_executable(OpenGLTemplate
    Effects/Display/Display.cpp
    Effects/Display/Display.h
        Include/GeometricModelLoader/AssimpLoader.h
        Include/GeometricModelLoader/GeometricModelLoader.h
        Include/GeometricModelLoader/OBJLoader.h
        Include/Application.h
        Include/Camera.h
        Include/EffectGL.h
        Include/EngineGL.h
        Include/Frame.h
        Include/FrameBufferObject.h
        Include/GeometricModel.h
        Include/GLProgram.h
        Include/GLProgramPipeline.h
        Include/MaterialGL.h
        Include/ModelGL.h
        Include/Node.h
        Include/NodeCollector.h
        Include/Scene.h
        Include/Texture2D.h
        Include/utils.hpp
    Libraries/Assimp/Compiler/poppack1.h
    Libraries/Assimp/Compiler/pushpack1.h
    Libraries/Assimp/ai_assert.h
    Libraries/Assimp/anim.h
    Libraries/Assimp/camera.h
    Libraries/Assimp/cexport.h
    Libraries/Assimp/cfileio.h
    Libraries/Assimp/cimport.h
    Libraries/Assimp/color4.h
    Libraries/Assimp/color4.inl
    Libraries/Assimp/config.h
    Libraries/Assimp/DefaultLogger.hpp
    Libraries/Assimp/defs.h
    Libraries/Assimp/Exporter.hpp
    Libraries/Assimp/Importer.hpp
    Libraries/Assimp/importerdesc.h
    Libraries/Assimp/IOStream.hpp
    Libraries/Assimp/IOSystem.hpp
    Libraries/Assimp/light.h
    Libraries/Assimp/Logger.hpp
    Libraries/Assimp/LogStream.hpp
    Libraries/Assimp/material.h
    Libraries/Assimp/material.inl
    Libraries/Assimp/matrix3x3.h
    Libraries/Assimp/matrix3x3.inl
    Libraries/Assimp/matrix4x4.h
    Libraries/Assimp/matrix4x4.inl
    Libraries/Assimp/mesh.h
    Libraries/Assimp/NullLogger.hpp
    Libraries/Assimp/postprocess.h
    Libraries/Assimp/ProgressHandler.hpp
    Libraries/Assimp/quaternion.h
    Libraries/Assimp/quaternion.inl
    Libraries/Assimp/scene.h
    Libraries/Assimp/texture.h
    Libraries/Assimp/types.h
    Libraries/Assimp/vector2.h
    Libraries/Assimp/vector2.inl
    Libraries/Assimp/vector3.h
    Libraries/Assimp/vector3.inl
    Libraries/Assimp/version.h
    Libraries/glad/include/glad/glad.h
    Libraries/glad/include/KHR/khrplatform.h
    Libraries/glad/src/glad.c
    Libraries/GLFW/include/glfw3.h
    Libraries/GLFW/include/glfw3native.h
    Libraries/glm/detail/_features.hpp
    Libraries/glm/detail/_fixes.hpp
    Libraries/glm/detail/_noise.hpp
    Libraries/glm/detail/_swizzle.hpp
    Libraries/glm/detail/_swizzle_func.hpp
    Libraries/glm/detail/_vectorize.hpp
    Libraries/glm/detail/compute_common.hpp
    Libraries/glm/detail/compute_vector_relational.hpp
    Libraries/glm/detail/func_common.inl
    Libraries/glm/detail/func_common_simd.inl
    Libraries/glm/detail/func_exponential.inl
    Libraries/glm/detail/func_exponential_simd.inl
    Libraries/glm/detail/func_geometric.inl
    Libraries/glm/detail/func_geometric_simd.inl
    Libraries/glm/detail/func_integer.inl
    Libraries/glm/detail/func_integer_simd.inl
    Libraries/glm/detail/func_matrix.inl
    Libraries/glm/detail/func_matrix_simd.inl
    Libraries/glm/detail/func_packing.inl
    Libraries/glm/detail/func_packing_simd.inl
    Libraries/glm/detail/func_trigonometric.inl
    Libraries/glm/detail/func_trigonometric_simd.inl
    Libraries/glm/detail/func_vector_relational.inl
    Libraries/glm/detail/func_vector_relational_simd.inl
    Libraries/glm/detail/glm.cpp
    Libraries/glm/detail/qualifier.hpp
    Libraries/glm/detail/setup.hpp
    Libraries/glm/detail/type_float.hpp
    Libraries/glm/detail/type_half.hpp
    Libraries/glm/detail/type_half.inl
    Libraries/glm/detail/type_mat2x2.hpp
    Libraries/glm/detail/type_mat2x2.inl
    Libraries/glm/detail/type_mat2x3.hpp
    Libraries/glm/detail/type_mat2x3.inl
    Libraries/glm/detail/type_mat2x4.hpp
    Libraries/glm/detail/type_mat2x4.inl
    Libraries/glm/detail/type_mat3x2.hpp
    Libraries/glm/detail/type_mat3x2.inl
    Libraries/glm/detail/type_mat3x3.hpp
    Libraries/glm/detail/type_mat3x3.inl
    Libraries/glm/detail/type_mat3x4.hpp
    Libraries/glm/detail/type_mat3x4.inl
    Libraries/glm/detail/type_mat4x2.hpp
    Libraries/glm/detail/type_mat4x2.inl
    Libraries/glm/detail/type_mat4x3.hpp
    Libraries/glm/detail/type_mat4x3.inl
    Libraries/glm/detail/type_mat4x4.hpp
    Libraries/glm/detail/type_mat4x4.inl
    Libraries/glm/detail/type_mat4x4_simd.inl
    Libraries/glm/detail/type_quat.hpp
    Libraries/glm/detail/type_quat.inl
    Libraries/glm/detail/type_quat_simd.inl
    Libraries/glm/detail/type_vec1.hpp
    Libraries/glm/detail/type_vec1.inl
    Libraries/glm/detail/type_vec2.hpp
    Libraries/glm/detail/type_vec2.inl
    Libraries/glm/detail/type_vec3.hpp
    Libraries/glm/detail/type_vec3.inl
    Libraries/glm/detail/type_vec4.hpp
    Libraries/glm/detail/type_vec4.inl
    Libraries/glm/detail/type_vec4_simd.inl
    Libraries/glm/ext/matrix_clip_space.hpp
    Libraries/glm/ext/matrix_clip_space.inl
    Libraries/glm/ext/matrix_common.hpp
    Libraries/glm/ext/matrix_common.inl
    Libraries/glm/ext/matrix_double2x2.hpp
    Libraries/glm/ext/matrix_double2x2_precision.hpp
    Libraries/glm/ext/matrix_double2x3.hpp
    Libraries/glm/ext/matrix_double2x3_precision.hpp
    Libraries/glm/ext/matrix_double2x4.hpp
    Libraries/glm/ext/matrix_double2x4_precision.hpp
    Libraries/glm/ext/matrix_double3x2.hpp
    Libraries/glm/ext/matrix_double3x2_precision.hpp
    Libraries/glm/ext/matrix_double3x3.hpp
    Libraries/glm/ext/matrix_double3x3_precision.hpp
    Libraries/glm/ext/matrix_double3x4.hpp
    Libraries/glm/ext/matrix_double3x4_precision.hpp
    Libraries/glm/ext/matrix_double4x2.hpp
    Libraries/glm/ext/matrix_double4x2_precision.hpp
    Libraries/glm/ext/matrix_double4x3.hpp
    Libraries/glm/ext/matrix_double4x3_precision.hpp
    Libraries/glm/ext/matrix_double4x4.hpp
    Libraries/glm/ext/matrix_double4x4_precision.hpp
    Libraries/glm/ext/matrix_float2x2.hpp
    Libraries/glm/ext/matrix_float2x2_precision.hpp
    Libraries/glm/ext/matrix_float2x3.hpp
    Libraries/glm/ext/matrix_float2x3_precision.hpp
    Libraries/glm/ext/matrix_float2x4.hpp
    Libraries/glm/ext/matrix_float2x4_precision.hpp
    Libraries/glm/ext/matrix_float3x2.hpp
    Libraries/glm/ext/matrix_float3x2_precision.hpp
    Libraries/glm/ext/matrix_float3x3.hpp
    Libraries/glm/ext/matrix_float3x3_precision.hpp
    Libraries/glm/ext/matrix_float3x4.hpp
    Libraries/glm/ext/matrix_float3x4_precision.hpp
    Libraries/glm/ext/matrix_float4x2.hpp
    Libraries/glm/ext/matrix_float4x2_precision.hpp
    Libraries/glm/ext/matrix_float4x3.hpp
    Libraries/glm/ext/matrix_float4x3_precision.hpp
    Libraries/glm/ext/matrix_float4x4.hpp
    Libraries/glm/ext/matrix_float4x4_precision.hpp
    Libraries/glm/ext/matrix_int2x2.hpp
    Libraries/glm/ext/matrix_int2x2_sized.hpp
    Libraries/glm/ext/matrix_int2x3.hpp
    Libraries/glm/ext/matrix_int2x3_sized.hpp
    Libraries/glm/ext/matrix_int2x4.hpp
    Libraries/glm/ext/matrix_int2x4_sized.hpp
    Libraries/glm/ext/matrix_int3x2.hpp
    Libraries/glm/ext/matrix_int3x2_sized.hpp
    Libraries/glm/ext/matrix_int3x3.hpp
    Libraries/glm/ext/matrix_int3x3_sized.hpp
    Libraries/glm/ext/matrix_int3x4.hpp
    Libraries/glm/ext/matrix_int3x4_sized.hpp
    Libraries/glm/ext/matrix_int4x2.hpp
    Libraries/glm/ext/matrix_int4x2_sized.hpp
    Libraries/glm/ext/matrix_int4x3.hpp
    Libraries/glm/ext/matrix_int4x3_sized.hpp
    Libraries/glm/ext/matrix_int4x4.hpp
    Libraries/glm/ext/matrix_int4x4_sized.hpp
    Libraries/glm/ext/matrix_projection.hpp
    Libraries/glm/ext/matrix_projection.inl
    Libraries/glm/ext/matrix_relational.hpp
    Libraries/glm/ext/matrix_relational.inl
    Libraries/glm/ext/matrix_transform.hpp
    Libraries/glm/ext/matrix_transform.inl
    Libraries/glm/ext/matrix_uint2x2.hpp
    Libraries/glm/ext/matrix_uint2x2_sized.hpp
    Libraries/glm/ext/matrix_uint2x3.hpp
    Libraries/glm/ext/matrix_uint2x3_sized.hpp
    Libraries/glm/ext/matrix_uint2x4.hpp
    Libraries/glm/ext/matrix_uint2x4_sized.hpp
    Libraries/glm/ext/matrix_uint3x2.hpp
    Libraries/glm/ext/matrix_uint3x2_sized.hpp
    Libraries/glm/ext/matrix_uint3x3.hpp
    Libraries/glm/ext/matrix_uint3x3_sized.hpp
    Libraries/glm/ext/matrix_uint3x4.hpp
    Libraries/glm/ext/matrix_uint3x4_sized.hpp
    Libraries/glm/ext/matrix_uint4x2.hpp
    Libraries/glm/ext/matrix_uint4x2_sized.hpp
    Libraries/glm/ext/matrix_uint4x3.hpp
    Libraries/glm/ext/matrix_uint4x3_sized.hpp
    Libraries/glm/ext/matrix_uint4x4.hpp
    Libraries/glm/ext/matrix_uint4x4_sized.hpp
    Libraries/glm/ext/quaternion_common.hpp
    Libraries/glm/ext/quaternion_common.inl
    Libraries/glm/ext/quaternion_common_simd.inl
    Libraries/glm/ext/quaternion_double.hpp
    Libraries/glm/ext/quaternion_double_precision.hpp
    Libraries/glm/ext/quaternion_exponential.hpp
    Libraries/glm/ext/quaternion_exponential.inl
    Libraries/glm/ext/quaternion_float.hpp
    Libraries/glm/ext/quaternion_float_precision.hpp
    Libraries/glm/ext/quaternion_geometric.hpp
    Libraries/glm/ext/quaternion_geometric.inl
    Libraries/glm/ext/quaternion_relational.hpp
    Libraries/glm/ext/quaternion_relational.inl
    Libraries/glm/ext/quaternion_transform.hpp
    Libraries/glm/ext/quaternion_transform.inl
    Libraries/glm/ext/quaternion_trigonometric.hpp
    Libraries/glm/ext/quaternion_trigonometric.inl
    Libraries/glm/ext/scalar_common.hpp
    Libraries/glm/ext/scalar_common.inl
    Libraries/glm/ext/scalar_constants.hpp
    Libraries/glm/ext/scalar_constants.inl
    Libraries/glm/ext/scalar_int_sized.hpp
    Libraries/glm/ext/scalar_integer.hpp
    Libraries/glm/ext/scalar_integer.inl
    Libraries/glm/ext/scalar_packing.hpp
    Libraries/glm/ext/scalar_packing.inl
    Libraries/glm/ext/scalar_relational.hpp
    Libraries/glm/ext/scalar_relational.inl
    Libraries/glm/ext/scalar_uint_sized.hpp
    Libraries/glm/ext/scalar_ulp.hpp
    Libraries/glm/ext/scalar_ulp.inl
    Libraries/glm/ext/vector_bool1.hpp
    Libraries/glm/ext/vector_bool1_precision.hpp
    Libraries/glm/ext/vector_bool2.hpp
    Libraries/glm/ext/vector_bool2_precision.hpp
    Libraries/glm/ext/vector_bool3.hpp
    Libraries/glm/ext/vector_bool3_precision.hpp
    Libraries/glm/ext/vector_bool4.hpp
    Libraries/glm/ext/vector_bool4_precision.hpp
    Libraries/glm/ext/vector_common.hpp
    Libraries/glm/ext/vector_common.inl
    Libraries/glm/ext/vector_double1.hpp
    Libraries/glm/ext/vector_double1_precision.hpp
    Libraries/glm/ext/vector_double2.hpp
    Libraries/glm/ext/vector_double2_precision.hpp
    Libraries/glm/ext/vector_double3.hpp
    Libraries/glm/ext/vector_double3_precision.hpp
    Libraries/glm/ext/vector_double4.hpp
    Libraries/glm/ext/vector_double4_precision.hpp
    Libraries/glm/ext/vector_float1.hpp
    Libraries/glm/ext/vector_float1_precision.hpp
    Libraries/glm/ext/vector_float2.hpp
    Libraries/glm/ext/vector_float2_precision.hpp
    Libraries/glm/ext/vector_float3.hpp
    Libraries/glm/ext/vector_float3_precision.hpp
    Libraries/glm/ext/vector_float4.hpp
    Libraries/glm/ext/vector_float4_precision.hpp
    Libraries/glm/ext/vector_int1.hpp
    Libraries/glm/ext/vector_int1_sized.hpp
    Libraries/glm/ext/vector_int2.hpp
    Libraries/glm/ext/vector_int2_sized.hpp
    Libraries/glm/ext/vector_int3.hpp
    Libraries/glm/ext/vector_int3_sized.hpp
    Libraries/glm/ext/vector_int4.hpp
    Libraries/glm/ext/vector_int4_sized.hpp
    Libraries/glm/ext/vector_integer.hpp
    Libraries/glm/ext/vector_integer.inl
    Libraries/glm/ext/vector_packing.hpp
    Libraries/glm/ext/vector_packing.inl
    Libraries/glm/ext/vector_relational.hpp
    Libraries/glm/ext/vector_relational.inl
    Libraries/glm/ext/vector_uint1.hpp
    Libraries/glm/ext/vector_uint1_sized.hpp
    Libraries/glm/ext/vector_uint2.hpp
    Libraries/glm/ext/vector_uint2_sized.hpp
    Libraries/glm/ext/vector_uint3.hpp
    Libraries/glm/ext/vector_uint3_sized.hpp
    Libraries/glm/ext/vector_uint4.hpp
    Libraries/glm/ext/vector_uint4_sized.hpp
    Libraries/glm/ext/vector_ulp.hpp
    Libraries/glm/ext/vector_ulp.inl
    Libraries/glm/gtc/bitfield.hpp
    Libraries/glm/gtc/bitfield.inl
    Libraries/glm/gtc/color_space.hpp
    Libraries/glm/gtc/color_space.inl
    Libraries/glm/gtc/constants.hpp
    Libraries/glm/gtc/constants.inl
    Libraries/glm/gtc/epsilon.hpp
    Libraries/glm/gtc/epsilon.inl
    Libraries/glm/gtc/integer.hpp
    Libraries/glm/gtc/integer.inl
    Libraries/glm/gtc/matrix_access.hpp
    Libraries/glm/gtc/matrix_access.inl
    Libraries/glm/gtc/matrix_integer.hpp
    Libraries/glm/gtc/matrix_inverse.hpp
    Libraries/glm/gtc/matrix_inverse.inl
    Libraries/glm/gtc/matrix_transform.hpp
    Libraries/glm/gtc/matrix_transform.inl
    Libraries/glm/gtc/noise.hpp
    Libraries/glm/gtc/noise.inl
    Libraries/glm/gtc/packing.hpp
    Libraries/glm/gtc/packing.inl
    Libraries/glm/gtc/quaternion.hpp
    Libraries/glm/gtc/quaternion.inl
    Libraries/glm/gtc/quaternion_simd.inl
    Libraries/glm/gtc/random.hpp
    Libraries/glm/gtc/random.inl
    Libraries/glm/gtc/reciprocal.hpp
    Libraries/glm/gtc/reciprocal.inl
    Libraries/glm/gtc/round.hpp
    Libraries/glm/gtc/round.inl
    Libraries/glm/gtc/type_aligned.hpp
    Libraries/glm/gtc/type_precision.hpp
    Libraries/glm/gtc/type_precision.inl
    Libraries/glm/gtc/type_ptr.hpp
    Libraries/glm/gtc/type_ptr.inl
    Libraries/glm/gtc/ulp.hpp
    Libraries/glm/gtc/ulp.inl
    Libraries/glm/gtc/vec1.hpp
    Libraries/glm/gtx/associated_min_max.hpp
    Libraries/glm/gtx/associated_min_max.inl
    Libraries/glm/gtx/bit.hpp
    Libraries/glm/gtx/bit.inl
    Libraries/glm/gtx/closest_point.hpp
    Libraries/glm/gtx/closest_point.inl
    Libraries/glm/gtx/color_encoding.hpp
    Libraries/glm/gtx/color_encoding.inl
    Libraries/glm/gtx/color_space.hpp
    Libraries/glm/gtx/color_space.inl
    Libraries/glm/gtx/color_space_YCoCg.hpp
    Libraries/glm/gtx/color_space_YCoCg.inl
    Libraries/glm/gtx/common.hpp
    Libraries/glm/gtx/common.inl
    Libraries/glm/gtx/compatibility.hpp
    Libraries/glm/gtx/compatibility.inl
    Libraries/glm/gtx/component_wise.hpp
    Libraries/glm/gtx/component_wise.inl
    Libraries/glm/gtx/dual_quaternion.hpp
    Libraries/glm/gtx/dual_quaternion.inl
    Libraries/glm/gtx/easing.hpp
    Libraries/glm/gtx/easing.inl
    Libraries/glm/gtx/euler_angles.hpp
    Libraries/glm/gtx/euler_angles.inl
    Libraries/glm/gtx/extend.hpp
    Libraries/glm/gtx/extend.inl
    Libraries/glm/gtx/extended_min_max.hpp
    Libraries/glm/gtx/extended_min_max.inl
    Libraries/glm/gtx/exterior_product.hpp
    Libraries/glm/gtx/exterior_product.inl
    Libraries/glm/gtx/fast_exponential.hpp
    Libraries/glm/gtx/fast_exponential.inl
    Libraries/glm/gtx/fast_square_root.hpp
    Libraries/glm/gtx/fast_square_root.inl
    Libraries/glm/gtx/fast_trigonometry.hpp
    Libraries/glm/gtx/fast_trigonometry.inl
    Libraries/glm/gtx/float_notmalize.inl
    Libraries/glm/gtx/functions.hpp
    Libraries/glm/gtx/functions.inl
    Libraries/glm/gtx/gradient_paint.hpp
    Libraries/glm/gtx/gradient_paint.inl
    Libraries/glm/gtx/handed_coordinate_space.hpp
    Libraries/glm/gtx/handed_coordinate_space.inl
    Libraries/glm/gtx/hash.hpp
    Libraries/glm/gtx/hash.inl
    Libraries/glm/gtx/integer.hpp
    Libraries/glm/gtx/integer.inl
    Libraries/glm/gtx/intersect.hpp
    Libraries/glm/gtx/intersect.inl
    Libraries/glm/gtx/io.hpp
    Libraries/glm/gtx/io.inl
    Libraries/glm/gtx/log_base.hpp
    Libraries/glm/gtx/log_base.inl
    Libraries/glm/gtx/matrix_cross_product.hpp
    Libraries/glm/gtx/matrix_cross_product.inl
    Libraries/glm/gtx/matrix_decompose.hpp
    Libraries/glm/gtx/matrix_decompose.inl
    Libraries/glm/gtx/matrix_factorisation.hpp
    Libraries/glm/gtx/matrix_factorisation.inl
    Libraries/glm/gtx/matrix_interpolation.hpp
    Libraries/glm/gtx/matrix_interpolation.inl
    Libraries/glm/gtx/matrix_major_storage.hpp
    Libraries/glm/gtx/matrix_major_storage.inl
    Libraries/glm/gtx/matrix_operation.hpp
    Libraries/glm/gtx/matrix_operation.inl
    Libraries/glm/gtx/matrix_query.hpp
    Libraries/glm/gtx/matrix_query.inl
    Libraries/glm/gtx/matrix_transform_2d.hpp
    Libraries/glm/gtx/matrix_transform_2d.inl
    Libraries/glm/gtx/mixed_product.hpp
    Libraries/glm/gtx/mixed_product.inl
    Libraries/glm/gtx/norm.hpp
    Libraries/glm/gtx/norm.inl
    Libraries/glm/gtx/normal.hpp
    Libraries/glm/gtx/normal.inl
    Libraries/glm/gtx/normalize_dot.hpp
    Libraries/glm/gtx/normalize_dot.inl
    Libraries/glm/gtx/number_precision.hpp
    Libraries/glm/gtx/number_precision.inl
    Libraries/glm/gtx/optimum_pow.hpp
    Libraries/glm/gtx/optimum_pow.inl
    Libraries/glm/gtx/orthonormalize.hpp
    Libraries/glm/gtx/orthonormalize.inl
    Libraries/glm/gtx/perpendicular.hpp
    Libraries/glm/gtx/perpendicular.inl
    Libraries/glm/gtx/polar_coordinates.hpp
    Libraries/glm/gtx/polar_coordinates.inl
    Libraries/glm/gtx/projection.hpp
    Libraries/glm/gtx/projection.inl
    Libraries/glm/gtx/quaternion.hpp
    Libraries/glm/gtx/quaternion.inl
    Libraries/glm/gtx/range.hpp
    Libraries/glm/gtx/raw_data.hpp
    Libraries/glm/gtx/raw_data.inl
    Libraries/glm/gtx/rotate_normalized_axis.hpp
    Libraries/glm/gtx/rotate_normalized_axis.inl
    Libraries/glm/gtx/rotate_vector.hpp
    Libraries/glm/gtx/rotate_vector.inl
    Libraries/glm/gtx/scalar_multiplication.hpp
    Libraries/glm/gtx/scalar_relational.hpp
    Libraries/glm/gtx/scalar_relational.inl
    Libraries/glm/gtx/spline.hpp
    Libraries/glm/gtx/spline.inl
    Libraries/glm/gtx/std_based_type.hpp
    Libraries/glm/gtx/std_based_type.inl
    Libraries/glm/gtx/string_cast.hpp
    Libraries/glm/gtx/string_cast.inl
    Libraries/glm/gtx/texture.hpp
    Libraries/glm/gtx/texture.inl
    Libraries/glm/gtx/transform.hpp
    Libraries/glm/gtx/transform.inl
    Libraries/glm/gtx/transform2.hpp
    Libraries/glm/gtx/transform2.inl
    Libraries/glm/gtx/type_aligned.hpp
    Libraries/glm/gtx/type_aligned.inl
    Libraries/glm/gtx/type_trait.hpp
    Libraries/glm/gtx/type_trait.inl
    Libraries/glm/gtx/vec_swizzle.hpp
    Libraries/glm/gtx/vector_angle.hpp
    Libraries/glm/gtx/vector_angle.inl
    Libraries/glm/gtx/vector_query.hpp
    Libraries/glm/gtx/vector_query.inl
    Libraries/glm/gtx/wrap.hpp
    Libraries/glm/gtx/wrap.inl
    Libraries/glm/simd/common.h
    Libraries/glm/simd/exponential.h
    Libraries/glm/simd/geometric.h
    Libraries/glm/simd/integer.h
    Libraries/glm/simd/matrix.h
    Libraries/glm/simd/neon.h
    Libraries/glm/simd/packing.h
    Libraries/glm/simd/platform.h
    Libraries/glm/simd/trigonometric.h
    Libraries/glm/simd/vector_relational.h
    Libraries/glm/common.hpp
    Libraries/glm/exponential.hpp
    Libraries/glm/ext.hpp
    Libraries/glm/fwd.hpp
    Libraries/glm/geometric.hpp
    Libraries/glm/glm.hpp
    Libraries/glm/integer.hpp
    Libraries/glm/mat2x2.hpp
    Libraries/glm/mat2x3.hpp
    Libraries/glm/mat2x4.hpp
    Libraries/glm/mat3x2.hpp
    Libraries/glm/mat3x3.hpp
    Libraries/glm/mat3x4.hpp
    Libraries/glm/mat4x2.hpp
    Libraries/glm/mat4x3.hpp
    Libraries/glm/mat4x4.hpp
    Libraries/glm/matrix.hpp
    Libraries/glm/packing.hpp
    Libraries/glm/trigonometric.hpp
    Libraries/glm/vec2.hpp
    Libraries/glm/vec3.hpp
    Libraries/glm/vec4.hpp
    Libraries/glm/vector_relational.hpp
    Libraries/imgui/imconfig.h
    Libraries/imgui/imgui.cpp
    Libraries/imgui/imgui.h
    Libraries/imgui/imgui_demo.cpp
    Libraries/imgui/imgui_draw.cpp
    Libraries/imgui/imgui_impl_glfw_gl3.cpp
    Libraries/imgui/imgui_impl_glfw_gl3.h
    Libraries/imgui/imgui_internal.h
    Libraries/imgui/stb_rect_pack.h
    Libraries/imgui/stb_textedit.h
    Libraries/imgui/stb_truetype.h
    Libraries/Logger/ImGUILogger.cpp
    Libraries/Logger/ImGuiLogger.h
    Libraries/stb/stb_image.h
    Libraries/image_DXT.cpp
    Libraries/image_DXT.h
    Libraries/Resource_mgr.hpp
    Libraries/Singleton.h
    Materials/BaseMaterial/BaseMaterial.cpp
    Materials/BaseMaterial/BaseMaterial.h
    Materials/PhongMaterial/PhongMaterial.cpp
    Materials/PhongMaterial/PhongMaterial.h
    Materials/RotationMaterial/RotationMaterial.cpp
    Materials/RotationMaterial/RotationMaterial.h
    Source/GeometricModelLoader/AssimpLoader.cpp
    Source/GeometricModelLoader/OBJLoader.cpp
    Source/Application.cpp
    Source/Camera.cpp
    Source/EffectGL.cpp
    Source/EngineGL.cpp
    Source/Frame.cpp
    Source/FrameBufferObject.cpp
    Source/GeometricModel.cpp
    Source/GLProgram.cpp
    Source/GLProgramPipeline.cpp
    Source/Main.cpp
    Source/MaterialGL.cpp
    Source/ModelGL.cpp
    Source/Node.cpp
    Source/Scene.cpp
    Source/Texture2D.cpp
)

target_link_libraries(OpenGLTemplate PRIVATE ${CMAKE_SOURCE_DIR}/Libraries/GLFW/lib/glfw3.lib)
